--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,9 @@
             "label": "C/C++: gcc 生成活动文件",
             "command": "/usr/bin/make",
             "args": [
-                "build"
+                "build",
+                "-j",
+                "8"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
