更新VSCode配置，新增构建脚本，修改图结构相关函数以支持拓扑排序和子图运行

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "program": "${workspaceFolder}/minimake",
       "args": [
-        "build",
+        // "build",
         "-v",
       ],
       "stopAtEntry": false,
