更新VSCode配置以设置CMake源目录，修复mk_parser.c中的日志错误信息格式

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "numbers": "cpp",
     "*.pmt": "c",
     "random": "cpp"
-  }
+  },
+  "cmake.sourceDirectory": "/home/sanchuan/Codes/C/minimake_src/third_party/igraph/src/centrality/prpack"
 }
